# kafkasend

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROTOCOL.md  README.md  docker-compose.yml  pyproject.toml  quickstart.sh
config/: client.env.example  portal.env.example
docker/: Dockerfile.client  Dockerfile.mock_api  Dockerfile.portal  mock_api.py
docs/: ASYNC_ANALYSIS.md
src/kafkasend/: __init__.py
src/kafkasend/client/: __init__.py  cli.py  receiver.py  sender.py
src/kafkasend/common/: __init__.py  auth.py  chunking.py  config.py  logging.py  models.py
src/kafkasend/portal/: __init__.py  job_manager.py  rest_client.py  security.py  service.py
testdata/: test.txt
tests/: __init__.py  test_chunking.py  test_crc32.py  test_models.py  test_portal_response_crc32.py  test_security.py
