[project]
name = "kafkasend"
version = "0.1.0"
description = "Kafka to REST API bridge with chunked file transfer support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kafka-python>=2.0.2",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "authlib>=1.3.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[project.scripts]
kafkasend-client = "kafkasend.client.cli:main"
kafkasend-portal = "kafkasend.portal.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
